    hook to check an arbitrary condition before scanning.)

  - Add explicit messages to tell when we're "Reading SConscript files
    ...," "done reading SConscript files," "Building targets," and
    "done building targets."  Add a -Q option to supress these.

  - Add separate $SHOBJPREFIX and $SHOBJSUFFIX construction variables
    (by default, the same as $OBJPREFIX and $OBJSUFFIX).

  - Add a Make-like message when asked to build a source file.

 From Steven Knight and Anthony Roach:

  - Man page:  document the fact that Builder calls return Node objects.

 From Steve LeBlanc:

  - Refactor option processing to use our own version of Greg Ward's
    Optik module, modified to run under Python 1.5.2.

  - Add a ParseConfig() command to modify an environment based on
    parsing output from a *-config command.

 From Jeff Petkau:

  - Fix interpretation of '#/../foo' on Win32 systems.

 From Anthony Roach:

 - Fixed use of command lines with spaces in their arguments,
   and use of Nodes with spaces in their string representation.

 - Make access and modification times of files in a BuildDir match
   the source file, even when hard linking isn't available.

 - Make -U be case insensitive on Win32 systems.

 - Issue a warning and continue when finding a corrupt .sconsign file.

 - Fix using an alias as a dependency of a target so that if one of the
   alias' dependencies gets rebuilt, the resulting target will, too.

 - Fix differently ordered targets causing unnecessary rebuilds
   on case insensitive systems.

 - Use os.system() to execute external commands whenever the "env"
   utility is available, which is much faster than fork()/exec(),
   and fixes the -j option on several platforms.

  - Fix use of -j with multiple targets.

  - Add an Options() object for friendlier accomodation of command-
    line arguments.

  - Add support for Microsoft VC++ precompiled header (.pch) files,
    debugger (.pdb) files, and resource (.rc) files.
